# multilang_site_heroku

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  private_key.pem  public_key.pem  pyproject.toml  requirements.txt  setup.cfg
api/: serializers.py  urls.py  views.py
authentication/: admin.py  forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/templates/: account.html  account_update.html  login.html  password_forgot.html  password_reset.html  password_update.html  signup.html
authentication/templates/partials/: modal_delete_account.html
chatbot/: forms.py  urls.py  views.py
chatbot/templates/: chatbot.html
error/: views.py
error/templates/: 403.html  404.html  500.html
flake8_html_report/: index.html
locale/en/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
main/: admin.py  forms.py  models.py  paginator.py  permissions.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/: post_create.html  post_detail.html  post_update.html  posts_list.html
main/templates/partials/: modal_delete_post.html  modal_search_post.html  pagination.html  read_post.html
multilang_site/: settings.py  urls.py
multilang_site/utils/: create_env.py  encryptor.py  jwt_token.py
requirements/: dev.txt  dev_freeze.txt  prod.txt  prod_freeze.txt
static/css/: style.css
static/js/: chatbot.js  dynamic_search.js
templates/: base.html
templates/partials/: flash_message.html  navbar.html
